Fix issues related to displaying on iPhones

--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,7 @@ canvas {
   border: none;
   border-radius: 50%;
   display: flex;
+  cursor: pointer;
   align-items: center;
   justify-content: center;
 }
